# ai-dashboard-builder

./: .env.default  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Dockerfile.ollama  LICENSE.md  README.md  app.py  blog_post.md  dashboard_builder.py  docker-compose.all-in-one.yml  docker-compose.yml  entrypoint.sh  llm_pipeline.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-compose-all-in-one-test.yml  docker-compose-test.yml  run-tests.yml
docker/: Dockerfile.dashboard  Dockerfile.ollama
src/: app.py  dashboard_builder.py
src/ai_dashboard_builder/: __init__.py  app.py  cli.py  dashboard_builder.py
src/ai_dashboard_builder/benchmarking/: __init__.py  dashboard_benchmark.py
src/ai_dashboard_builder/docs/: technical_overview.md
src/ai_dashboard_builder/llm/: __init__.py  llm_pipeline.py  prompts.py
src/ai_dashboard_builder/tests/: test_dashboard_builder.py  test_llm_pipeline.py  test_prompts.py
src/ai_dashboard_builder/utils/: paths.py
src/llm/: __init__.py  llm_pipeline.py  prompts.py
