[project]
name = "ai-dashboard-builder"
version = "0.6.0"
description = "Throw your data, let AI make a dashboard"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "pnmartinez", email = "pablonavaber@hotmail.com" },
]
dependencies = [
    "anthropic==0.18.1",
    "dash-bootstrap-components==1.5.0",
    "dash-dangerously-set-inner-html==0.0.2",
    "dash[diskcache]==2.15.0",
    "markdown2==2.4.12",
    "numpy==1.26.4",
    "openai==1.12.0",
    "openpyxl==3.1.2",
    "pandas==2.2.1",
    "plotly==5.19.0",
    "python-dotenv==1.0.0",
    "requests==2.32.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "dashboard", "data", "visualization", "plotly", "dash", "openai"]

[project.urls]
Homepage = "https://github.com/pnmartinez/ai-dashboard-builder/"

[project.scripts]
ai_dashboard_builder = "ai_dashboard_builder.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I", "D"]
extend-ignore = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
testpaths = ["src/ai_dashboard_builder/tests"]
python_files = "test_*.py"
addopts = "-v --cov=ai_dashboard_builder"

[tool.coverage.run]
source = ["ai_dashboard_builder"]
omit = ["tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.11.0"
